# src/users/user.entity.ts
@@ -1,0 +1,22 @@
+import { Entity, PrimaryGeneratedColumn, Column, Unique } from 'typeorm';
+import { Exclude } from 'class-transformer';
+
+@Entity()
+@Unique(['email'])
+export class User {
+    @PrimaryGeneratedColumn()
+    id: number;
+
+    @Column()
+    email: string;
+
+    @Column()
+    @Exclude()
+    password: string;
+
+    @Column({ default: false, name: 'is_admin' })
+    isAdmin: boolean;
+
+    @Column({ default: true, name: 'is_active' })
+    isActive: boolean;
+}
